0.1.8:
- Add custom color support

0.1.7:
- Spawn pieces within view

0.1.6:
- Persist settings via configuration file
- Draw playfield border as solid blocks

0.1.5:
- Use default terminal colors

0.1.4:
- Allow ghost piece to be disabled
- Add mouse support

0.1.3:
- Animate game over display
- Add /nick command

0.1.2:
- Resolve early game over issue
- Resolve display issue when rendering at size 3

0.1.1:
- Add game browser and support custom game creation
- Improve playfield display and scaling
- Add website and version to title screen
- Kick inactive players

0.1.0:
- Initial release