@@ -1,5 +1,6 @@
 0.1.8:
 - Add custom color support
+- Improve SSH host key file not found error
 
 0.1.7:
 - Spawn pieces within view
